--- a/PROYECTO - MODULO 1/public/views/datosclientes.html
+++ b/PROYECTO - MODULO 1/public/views/datosclientes.html
@@ -29,7 +29,7 @@
 <body>
     <!-- NAVBAR -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Bebe<span class="text-info">eco4D</span>
+        <a class="navbar-brand" href="/">Bebe<span class="text-info">eco4D</span>
         </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
             aria-expanded="false" aria-label="Toggle navigation">
@@ -57,7 +57,7 @@
                     <a class="nav-link" href="/tarifas">Tarifas</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Contacto</a>
+                    <a class="nav-link" href="/contacto">Contacto</a>
                 </li>
                 <li class="nav-item active">
                     <a class="nav-link" href="/datosclientes">Clientes
@@ -112,9 +112,8 @@
                 <div class="col-12 col-md-4 p-3">
                     <h6>MENU</h6>
                     <ul class="navbar-nav mr-auto">
-                        <li class="nav-item active">
+                        <li class="nav-item">
                             <a class="nav-link text-info" href="/">Inicio
-                                <span class="sr-only">(current)</span>
                             </a>
                         </li>
                         <li class="nav-item ">
@@ -126,7 +125,7 @@
                             <a class="nav-link text-info" href="/tarifas">Tarifas</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-info" href="#">Contacto</a>
+                            <a class="nav-link text-info" href="/contacto">Contacto</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link text-info" href="datosclientes">Clientes</a>
